--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Tweets#index</h1>
-<p>Find me in app/views/tweets/index.html.erb</p>
+<h1>TopPage</h1>
+
+<% if user_signed_in? %>
+  <ul>
+    <li>Hello,<%= link_to "#{current_user.name}", "#" %></li>
+    <li><%= link_to "Sign_out", destroy_user_session_path, method: :delete %></li>
+  </ul>
+<% else %>
+  <ul>
+    <li><%= link_to "Sign_in", new_user_session_path %></li>
+    <li><%= link_to "Sign_up", new_user_registration_path %></li>
+  </ul>
+<% end %>
