ユーザーページへのリンクを設定

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,7 +2,7 @@
 
 <% if user_signed_in? %>
   <ul>
-    <li>Hello,<%= link_to "#{current_user.name}", "#" %></li>
+    <li>Hello,<%= link_to "#{current_user.name}", user_path(current_user) %></li>
     <li><%= link_to "Sign_out", destroy_user_session_path, method: :delete %></li>
   </ul>
 <% else %>
