電話番号入力時に、最大入力文字数を設けた

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
 
   <div class="field">
     <%= f.label :phone_num %><br />
-    <%= f.text_field :phone_num, autocomplete: "phone_num" %>
+    <%= f.text_field :phone_num, autocomplete: "phone_num", maxlength:'11'%>
   </div>
 
   <div class="field">
