--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,13 +1,3 @@
-<h1>TopPage</h1>
+<%= render '/shared/header'%>
 
-<% if user_signed_in? %>
-  <ul>
-    <li>Hello,<%= link_to "#{current_user.name}", user_path(current_user) %></li>
-    <li><%= link_to "Sign_out", destroy_user_session_path, method: :delete %></li>
-  </ul>
-<% else %>
-  <ul>
-    <li><%= link_to "Sign_in", new_user_session_path %></li>
-    <li><%= link_to "Sign_up", new_user_registration_path %></li>
-  </ul>
-<% end %>
+<h1>MainPage</h1>
