ユーザーのフォロー人数が非同期で更新されるようにした

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,10 +30,10 @@
 </div>
 
   <div id="follower">
-    <h5 style="color: black;">フォロワー<%= @user.followers.count %>人</h5>
+    <h5 >フォロワー<%= @user.followers.count %>人</h5>
   </div>
   <div id="follow">
-    <h5 style="color: black;">フォロー<%= @user.followings.count %>人</h5>
+    <h5 >フォロー<%= @user.followings.count %>人</h5>
   </div>
   <div>
       <%= render "follow_form" %>
