--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,6 +35,14 @@
   <div id="follow">
     <h5 >フォロー<%= @user.followings.count %>人</h5>
   </div>
+  <div id="follow-list">
+    <h5>フォローリスト</h5>
+      <% @user.followings.each do |following| %>
+        <ul>
+          <li><%= link_to "#{following.name}", user_path(following) %></li>
+        </ul>
+      <% end %>
+  </div>
   <div>
       <%= render "follow_form" %>
   </div>
