詳細ページ概略よし

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -25,7 +25,7 @@
         </div>
       </div>
           <div class="tweet-image-content">
-            <%= link_to root_path do%>
+            <%= link_to tweet_path(tweet.id) do%>
               <%= image_tag tweet.image, class:'tweet-image'%>
           </div>
         <% end %>
