--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,8 +12,9 @@
   </div>
 <% end %>
 
-<div class="user-name">
-  UserName: <%= @user.name %>
+<div class="user-name-group">
+  <li class="name-left">UserName:</li>
+  <li class="name-right"><%= @user.name %></li>
 </div>
 
 <div class="user-introduce">
