--- a/app/assets/stylesheets/tweets/show.css
+++ b/app/assets/stylesheets/tweets/show.css
@@ -13,7 +13,23 @@
 .user-bar {
   display: flex;
   width: 100vw;
+  height: 40px;
   background-color: lemonchiffon;
+}
+
+.user-icon-group {
+  width: 40px;
+  height: 100%;
+  margin-left: 20px;
+  border: 1px solid black;
+  background-color: mediumaquamarine;
+}
+
+.user-icon {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  background-color: dodgerblue;
 }
 
 .user-name-group {
