--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -2,7 +2,7 @@
 <%= render 'shared/error_messages', resource: @tweet %>
 
 <div class="tweet-form">
-  <%= form_with model: @tweet, local: true do |f| %>
+  <%= form_with model: @tweet, url: tweets_path, local: true do |f| %>
 
   <div class="field" id="img-select">
     <%= f.label :image %><br>
@@ -13,6 +13,11 @@
   <div class="field">
     <%= f.label :text %><br>
     <%= f.text_area :text, placeholder: '400字以内', maxlength: '400' %>
+  </div>
+
+  <div class="field">
+    <%= f.label :tag %><br>
+    <%= f.text_field :name, class:'tag_name', placeholder: "タグを入力。複数入力するには','で区切ってください", maxlength: '40' %>
   </div>
 
   <div class="send-btn">
