--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,8 +1,9 @@
 <%= render 'shared/header' %>
-<%= render 'shared/error_messages', resource: @tweet %>
+<%= render 'shared/error_messages', resource: @tweets_tag %>
 
 <div class="tweet-form">
-  <%= form_with model: @tweet, local: true do |f| %>
+  <%= form_with model: @tweets_tag, url: tweet_path(@tweets_tag.user_id),
+    local: true do |f| %>
 
   <div class="field" id="img-select">
     <%= f.label :image %><br>
@@ -17,7 +18,7 @@
 
   <div class="field">
     <%= f.label :tag %><br>
-    <%= f.text_field :name, class:'tag_name', placeholder: "タグを入力。複数入力するには','で区切ってください", maxlength: '40' %>
+    <%= f.text_field :tag_name, class:'tag_name', placeholder: "タグを入力(複数入力するには','で区切ってください", maxlength: '40' %>
   </div>
 
   <div class="send-btn">
