微細な変更

--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -2,8 +2,7 @@
 <%= render 'shared/error_messages', resource: @tweets_tag %>
 
 <div class="tweet-form">
-  <%= form_with model: @tweets_tag, url: tweet_path(@tweets_tag.user_id),
-    local: true do |f| %>
+  <%= form_with model: @tweets_tag, url: tweet_path, local: true do |f| %>
 
   <div class="field" id="img-select">
     <%= f.label :image %><br>
@@ -18,7 +17,9 @@
 
   <div class="field">
     <%= f.label :tag %><br>
-    <%= f.text_field :tag_name, class:'tag_name', placeholder: "タグを入力(複数入力するには','で区切ってください", maxlength: '40' %>
+    <%= f.text_field :tag_name, class:'tag_name', id:'tag_name', placeholder: "タグを入力。複数入力するには','で区切ってください", maxlength: '40' %>
+  </div>
+  <div id="search-result">
   </div>
 
   <div class="send-btn">
