コメントを非同期で投稿できる
ActionCable使用
不完全
CSSが崩れる
トップページから投稿できない

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -42,6 +42,8 @@
             <%= render_with_tags(tweet.text) %>
           </p>
         </div>
+
+        <%= render "/comments/comments", comments: tweet.comments %>
       </li>
     <% end %>
   </ul>
