--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -38,6 +38,18 @@
 
 <%= render "/comments/comments", comments: @comments%>
 
+<div class="like-container">
+  <% if current_user.liked_by?(@tweet.id) %>
+    <p id="tweet-like">
+      <%= link_to 'いいねを外す', destroy_like_path(@tweet), method: :delete, remote: true %><%= @tweet.likes.count %>
+    </p>
+  <% else %>
+    <p id="tweet-like">
+      <%= link_to 'いいね', create_like_path(@tweet), method: :post, remote: true %><%= @tweet.likes.count %>
+    </p>
+  <% end %>
+</div>
+
   <div class="comment-form">
     <%= form_with model: [@tweet, @comment] do |f|%>
       <%= f.text_area :comment, class:"comment-area", placeholder: "140字まで" %>
