詳細画面が崩れる問題を解決
詳細画面では、いいねボタン周辺のみ更新している
一覧画面では未実装

--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -33,11 +33,11 @@
 
 <div class="like-container">
   <% if current_user.liked_by?(tweet.id) %>
-    <p>
+    <p id="tweet-like">
       <%= link_to 'いいねを外す', destroy_like_path(tweet), method: :delete, remote: true %><%= tweet.likes.count %>
     </p>
   <% else %>
-    <p>
+    <p id="tweet-like">
       <%= link_to 'いいね', create_like_path(tweet), method: :post, remote: true %><%= tweet.likes.count %>
     </p>
   <% end %>
