--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -34,11 +34,17 @@
 <div class="like-container">
   <% if current_user.liked_by?(tweet.id) %>
     <p id="tweet-like">
-      <%= link_to 'いいねを外す', destroy_like_path(tweet), method: :delete, remote: true %><%= tweet.likes.count %>
+      <%= link_to destroy_like_path(tweet), method: :delete, remote: true do %>
+        <%= image_tag 'like-btn.png', width:"20",height:"20"%> いいね！
+      <% end %>
+      <%= tweet.likes.count %>
     </p>
   <% else %>
     <p id="tweet-like">
-      <%= link_to 'いいね', create_like_path(tweet), method: :post, remote: true %><%= tweet.likes.count %>
+      <%= link_to  create_like_path(tweet), method: :post, remote: true do %>
+        <%= image_tag 'unlike-btn.png', width:"20",height:"20"%> いいね！
+      <% end %>
+      <%= tweet.likes.count %>
     </p>
   <% end %>
 </div>
