データを入れた、jQueryを入れた

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="header">
 
-  <h1>
+  <h1 id="main-title">
     <%= link_to "Solo-Camp SNS", root_path %>
   </h1>
 
@@ -13,5 +13,4 @@
       <%= link_to "Sign_out", destroy_user_session_path, method: :delete %>
     </div>
   </div>
-
 </div>
