--- a/app/assets/stylesheets/landing_page.css
+++ b/app/assets/stylesheets/landing_page.css
@@ -7,6 +7,21 @@
   position: relative;
 }
 
+.main-title {
+  /* background-color: chocolate; */
+  width: 50vw;
+  text-align: center;
+  position: absolute;
+  top: calc((100vh - 400px) / 2);
+  left: calc(100vw - 95%);
+}
+
+.solo-camp-sns {
+  font-size: 50px;
+  font-family: 'Homemade Apple', cursive;
+  color: aliceblue;
+}
+
 .sign-container {
   border: 1px solid white;
   border-radius: 10px;
