--- a/app/views/camp_sites/show.html.erb
+++ b/app/views/camp_sites/show.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
 <li>
-<h2><%= @result.site %></h2>
+<h2><%= @result.site %></h2><%= @result.created_at %>
 </li>
 <li>
 <h3><%= @result.prefecture.name %> <%= @result.address %></h3>
