--- a/app/views/camp_sites/search.html.erb
+++ b/app/views/camp_sites/search.html.erb
@@ -8,8 +8,8 @@
 
 <% if @results.length != 0 %>
   <% @results.each do |result| %>
-    <li id="camp_site_<%= result.id %>">
-      <%= render "result", result: result%>
+    <li id="camp_site_<%= result.id %>" class="camp-site">
+      <%= render "result", result: result %>
     </li>
   <% end %>
 <% else %>
