訪問日時を出せるようにした

--- a/app/views/camp_sites/_result.html.erb
+++ b/app/views/camp_sites/_result.html.erb
@@ -2,12 +2,17 @@
   <%= result.site %>
 
   <% if current_user.visited_by?(result.id) %>
-    <%= link_to  destroy_visited_site_path(result), method: :delete, remote: true, id:'visited' do %>
-      novisit <%= image_tag 'default_tent.png', width:'20', height:'20'%>
+    <%= link_to  destroy_visited_site_path(result), method: :delete, remote: true, data: { confirm: "#{result.site} を未訪問にしますか？"},id:'visited' do %>
+      visited <%= image_tag 'checked-tent.png', width:'20', height:'20'%>
+    <% end %>
+    <% result.visited_sites.each do |visit| %>
+      <% if current_user.id == visit.user_id%>
+        (at : <%= l visit.created_at %>)
+      <% end %>
     <% end %>
   <% else %>
     <%= link_to create_visited_site_path(result), method: :post, remote: true, id:'visit' do %>
-      visited <%= image_tag 'checked-tent.png', width:'20', height:'20'%>
+      novisit <%= image_tag 'default_tent.png', width:'20', height:'20'%>
     <% end %>
   <% end %>
 <% end %>
