--- a/app/views/camp_sites/search.html.erb
+++ b/app/views/camp_sites/search.html.erb
@@ -3,7 +3,7 @@
 <% if @result != nil %>
   <h2><%= @result.prefecture.name %></h2>
 <% else %>
-  <h2>This area has any campsites</h2>
+  <h2>This area has any campsite</h2>
 <% end %>
 
 <% if @results.length != 0 %>
