intereモデルを作成した

--- a/app/views/camp_sites/show.html.erb
+++ b/app/views/camp_sites/show.html.erb
@@ -5,12 +5,15 @@
 
     <div class="site-show-head">
       <h2><%= @result.site %></h2>
+      <p>いってみたい</p>
+    </div>
+    <p>
       <% @result.visited_sites.each do |visit| %>
         <% if current_user.id == visit.user_id%>
           <%= l visit.created_at %> に訪れました。
         <% end %>
       <% end %>
-    </div>
+    </p>
   </li>
   <li>
     <h3><%= @result.prefecture.name %> <%= @result.address %></h3>
