--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -14,6 +14,13 @@
     <% end %>
   </div>
 </div>
+
+<div class="tweet-camp-site">
+  <% if tweet.camp_site_id != nil %>
+    <%= link_to tweet.camp_site.site, camp_site_show_path(tweet.camp_site_id) %>
+  <% end %>
+</div>
+
 <div class="tweet-image-content">
   <%= link_to tweet_path(tweet.id) do%>
     <% if tweet.image.attached? %>
@@ -35,7 +42,7 @@
   <% if current_user.liked_by?(tweet.id) %>
     <p id="tweet-like">
       <%= link_to destroy_like_path(tweet), method: :delete, remote: true do %>
-        <%= image_tag 'like-btn.png', width:"20",height:"20"%> いいね！
+        <%= image_tag 'like-btn2.png', width:"20",height:"20"%> いいね！
       <% end %>
       <%= tweet.likes.count %>
     </p>
