--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -15,6 +15,10 @@
     <%= f.text_area :text, placeholder: '400字以内', maxlength: '400' %>
   </div>
 
+  <div class="select-visit">
+    <%= f.collection_select(:camp_site_id, CampSite.all, :id, :site, {include_blank: "サイトを選択"}, {class:"site-select"}) %>
+  </div>
+
   <div class="send-btn">
     <%= f.submit "SEND" %>
   </div>
