--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -13,6 +13,10 @@
     <%= link_to 'New-Diary', new_tweet_path %>
   </h2>
 
+  <h2>
+    <%= link_to 'My Gears', gears_path %>
+  </h2>
+
   <ul class="tweet-list">
     <% @tweets.each do |tweet| %>
       <li class="list" id="tweet_<%= tweet.id %>">
