--- a/app/views/gears/new.html.erb
+++ b/app/views/gears/new.html.erb
@@ -13,8 +13,9 @@
 
     <div class="field">
     <%= f.label 'メーカー' %><br />
-    <%= f.text_field :maker_name %>
+    <%= f.text_field :maker_name, id:"maker_name" %>
     </div>
+    <div id="search_result"></div>
 
     <div class="field" id="img-select">
     <%= f.label '画像' %><br />
@@ -24,7 +25,7 @@
 
     <div class="field">
     <%= f.label 'ギア名' %><br />
-    <%= f.text_area :gear_name %>
+    <%= f.text_field :gear_name %>
     </div>
 
     <div class="field">
