--- a/app/assets/stylesheets/landing_page.css
+++ b/app/assets/stylesheets/landing_page.css
@@ -1,7 +1,18 @@
+/* .landing-page {
+  width: 100%;
+  height: 0;
+  padding-top: 105.715514%;
+  background: url('campfire_mobile.jpeg') no-repeat ;
+  background-position: center center;
+  background-size: cover;
+  background-color: rgba(1, 0, 15, 0.952);
+  position: relative;
+} */
+
 .landing-page {
-  /* width: 100vw; */
   height: 100vh;
-  background: url('campfire.jpeg') no-repeat ;
+  background: url('campfire_mobile.jpeg') no-repeat ;
+  background-position: center center;
   background-size: cover;
   background-color: rgba(1, 0, 15, 0.952);
   position: relative;
